
	* src/xregex.c : Pass REG_NOTBOL and REG_NOTEOL to regexec.
	The end of line ($) and beginning of line (^) operators are not
	deterministic the way powerman applies regexes to buffers as they 
	fill and should not be used.

	* test/tregex.c : Test for above.

	* etc/baytech-rpc28-nc.dev : Replace use of end of line operator 
	in expects with full text of prompt.
	
2008-06-09 Jim Garlick <garlick@llnl.gov>

	* src/powerman.c : Option changes:
	- change -q,--query option to -q,--query-all with no_arguments
	- add -Q,--query option with required_arguments
	- change -n,--node option to -n,--soft-all with no_arguments
	- add -N,--soft option with required_arguments
	- change -t,--temp option to -t,--temp-all with no_arguments
	- add -P,--temp option with required_arguments
	- change -b,--beacon option to -b,--beacon-all with no_arguments
	- add -B,--beacon option with required_arguments
	- change -d,--destination option to -h,--server-host
	- change -D,--device option to -d,--device-all with no_arguments
	- add -D,--device option with required_arguments

	* scripts/stonith : Reflect option changes above.

	* man/powerman.1 : Reflect option changes above.

	* src/powerman.c : Cleanup:
	- deprecate "off" and "on" program name support
	- abbreviate usage() message to only the most common options
	- allow multiple commands to be run in one invocation
	- add -Z,--dump-cmds option to list commands without executing

	* src/argv.c : Added argv_length(), argv_append().

	* test/targv.c : Sanity check for argv.c.

	* test/* : Tests that exercise the work above.

2008-06-04 Jim Garlick <garlick@llnl.gov>

	* src/powermand.c : Fix signal handling in test (coprocess) mode.

2008-06-02 Jim Garlick <garlick@llnl.gov>

	* : tag powerman-2.0

	* src/xregex.c : Allow main expression match information to be
	obtained.

	* src/device_pipe.c : Make forkpty() error fatal.

	* src/xpty.c : Call err_exit() not lsd_fatal_error() on error.

2008-06-01 Jim Garlick <garlick@llnl.gov>
