@@ -12,6 +12,7 @@ AC_META
 AC_CONFIG_AUX_DIR([config])
 AC_CONFIG_SRCDIR([NEWS])
 AC_CANONICAL_SYSTEM
+X_AC_EXPAND_INSTALL_DIRS
 
 ##
 # Automake support.
