@@ -47,7 +47,6 @@
 #include <stdio.h>
 #include <stdlib.h>
 
-#include "powerman.h"
 #include "list.h"
 #include "xmalloc.h"
 #include "hostlist.h"
